fix: align NoResults component to center

--- a/src/Components/NoResults.module.css
+++ b/src/Components/NoResults.module.css
@@ -1,3 +1,11 @@
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
